<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frost">

    <TextView
        android:id="@+id/specific_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/sinbad"
        android:gravity="center"
        android:text="@string/specific_title"
        android:textSize="@dimen/title_2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/specific_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_1"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_title" />

    <Button
        android:id="@+id/specific_option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_2"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_1" />

    <Button
        android:id="@+id/specific_option_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_3"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_2" />

    <Button
        android:id="@+id/specific_option_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_4"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_3" />

    <Button
        android:id="@+id/specific_option_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_5"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_4" />

    <Button
        android:id="@+id/specific_option_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_6"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_5" />

    <Button
        android:id="@+id/specific_option_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_7"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_6" />

    <Button
        android:id="@+id/specific_option_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/specific_option_8"
        android:textSize="@dimen/title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specific_option_7" />


</androidx.constraintlayout.widget.ConstraintLayout>